# Advanced-Calculator

./: .gitignore  CMakeLists.txt  README.md  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  input.txt  main.c
DataForTests/: alex_test1.txt  alex_test2.txt  alex_test3.txt  all_operations.txt  bad_function_2_args.txt  elena_test.txt  igor_test1.txt  igor_test2.txt  igor_test3.txt  ilya_test.txt  more_subs.txt  power_and_subs.txt  power_operations.txt  simple_unary_operations.txt  tim_test1.txt  tim_test2.txt  tim_test3.txt  unary_operations.txt
Graph/: graph.c  graph.h
OpTree/: tree.c  tree.h
Operations/: constructions.c  constructions.h  ops.c  ops.h
Parser/: Parser.c  Parser.h  parser.c  parser.h
RPN/: RPN.c  RPN.h
Stack/: stack.c  stack.h
